Fix issue with overlapping header and live preview mode

--- a/resources/sass/cp.scss
+++ b/resources/sass/cp.scss
@@ -3,7 +3,7 @@
     z-index: 1000;
   }
   .live-preview {
-    top: 88px;
+    padding-top: 88px;
   }
   @media (min-width: 768px) {
     #main {
